--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h2 {
 
 table {
     border-collapse: collapse;
-    width: 95%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@ td {
     padding: 8px;
 }
 
-td:hover {
+tr:hover {
     background-color: #ffbb00;
 }
 
@@ -34,14 +34,12 @@ th {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
     margin-left: 15px;
 }
 
 main {
     display: grid;
-    grid-template-columns: 1fr 500px;
+    grid-template-columns: 1fr 300px;
 }
 
 main .tabela {
@@ -51,7 +49,6 @@ main .tabela {
 .inserir {
     grid-column: 2;
     padding: 20px;
-    border: 1px solid #000000;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
     background-color: #ffffff;
@@ -80,7 +77,7 @@ main .tabela {
 }
 
 .inserir input,
-.inserir button {
+.inserir button, .inserir select {
     padding: 8px;
     font-size: 16px;
     border: 1px solid black;
