--- a/style.css
+++ b/style.css
@@ -103,3 +103,14 @@ main .tabela {
 .selecionada {
     background-color: #ffbb00;
 }
+
+main button {
+    width: 80px;
+    padding: 5px;
+    margin-left: 3px;
+    margin-top: 3px;
+    font-family: "Ubuntu", sans-serif;
+    color: white;
+    background-color: #000000;
+    cursor: pointer;
+}
