--- a/stylePizza.css
+++ b/stylePizza.css
@@ -127,3 +127,14 @@ form input#pizza_name{
 .selecionada {
     background-color: #e3342f;
 }
+
+main button {
+    width: 80px;
+    padding: 5px;
+    margin-left: 3px;
+    margin-top: 3px;
+    font-family: "Ubuntu", sans-serif;
+    color: white;
+    background-color: #000000;
+    cursor: pointer;
+}
