--- a/Estoque/styleInicio.css
+++ b/Estoque/styleInicio.css
@@ -61,18 +61,19 @@ h1 {
 
 .btn {
     padding: 10px 20px;
-    margin: 10px 0; /* Adiciona margem vertical entre os botões */
+    margin: 10px 0;
     font-size: 16px;
-    cursor: pointer;
-    width: 200px; /* Define uma largura fixa para os botões, opcional */
+    width: 200px;
     font-size: 20px;
     border-radius: 10px;
-    border: 1px solid black;
+    border: none;
+    background-color: #e62e2e;
+    color: #ffffff;
 }
 
 .btn:hover {
     background-color: #d10e0e;
-    color: #ffffff;
+    cursor: pointer;
 }
 
 img {
