--- a/Vendas/styleMenuVendas.css
+++ b/Vendas/styleMenuVendas.css
@@ -29,7 +29,7 @@ main {
     width: 100%;
 }
 
-.main-container li{
+.main-container li {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,13 +55,13 @@ li a:hover {
     text-decoration: underline;
 }
 
-.main-container li.imagem{
+.main-container li.imagem {
     display: flex;
     align-items: center;
     margin-top: 50px;
 }
 
-.main-container img#pizza{
+.main-container img#pizza {
     width: 400px;
     margin: 0 auto;
     border-radius: 10px;
@@ -90,11 +90,12 @@ li a:hover {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease-in-out;
+    transition: box-shadow 0.5s ease-in-out;
+    border-left: 4px solid red;
 }
 
 .pizzas-container li:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
 
@@ -126,4 +127,53 @@ li a:hover {
     color: red;
     font-weight: bold;
     font-size: 16px;
+}
+
+.desenvolvido {
+    padding: 50px;
+    padding-bottom: 100px;
+    background-color: #e9e8e8;
+}
+
+.desenvolvido p {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+footer {
+    background-color: #ef4342;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    position: fixed !important;
+    bottom: 0;
+    width: 100%;
+}
+
+footer ul {
+    margin: 7px;
+}
+
+footer ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 45px;
+
+}
+
+footer ul li a {
+    font-size: 12px;
+    color: white;
+    margin-top: 10px;
+}
+
+footer ul li img {
+    display: block;
+    margin: 0 auto;
 }
