--- a/Vendas/stylePizzaVenda.css
+++ b/Vendas/stylePizzaVenda.css
@@ -2,21 +2,55 @@ body {
     font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
 }
 
 .header {
     background-color: #f44336;
     color: white;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px;
 }
 
-.header h1{
+.header ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.header ul li {
+    display: inline;
+}
+
+.header ul li.center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.header ul li button {
+    font-size: 20px;
+    background-color: #f44336;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.header ul li button:hover {
+    background-color: #d1322f;
+}
+
+.header h1 {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 16px;
     font-weight: bold;
+    left: 50%;
 }
 
 .container {
@@ -27,13 +61,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-ul{
+.container ul {
     list-style: none;
     padding: 0;
     width: 100%;
 }
 
-li{
+.container li {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -91,3 +125,77 @@ li{
     color: #f44336;
     font-weight: bold;
 }
+
+
+.pizza-item {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.ingredientes {
+    margin-top: 5px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    right: 10px;
+    top: 25%;
+}
+
+.buttons .add-button,
+.remove-button {
+    background-color: white;
+    color: red;
+    border: none;
+    margin-right: 30px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    font-size: 24px;
+    font-weight: normal;
+    font-family: Roboto, sans-serif;
+    border-radius: 100px;
+}
+
+.pizza-item h3,
+.pizza-item p {
+    margin: 0 10px;
+}
+
+.add-button:hover {
+    background-color: rgb(241, 240, 240);
+}
+.remove-button:hover {
+    background-color: rgb(241, 240, 240);
+}
+
+.selection-summary {
+    padding: 20px;
+    border-top: 1px solid #ddd;
+    background-color: #f9f9f9;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+#selected-flavors {
+    margin-top: 10px;
+}
+
+#next-button {
+    background-color: #f78f8f;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: not-allowed;
+}
+
+#next-button:enabled {
+    background-color: #ef4342;
+    cursor: pointer;
+}
+
